# FortuneAvenue

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  FortuneAvenueDev.sln  Fortune_Avenue.sln  LICENSE.txt  Makefile  Nuevo Text Document.txt  README.md  cmake_install.cmake  perfil.json  proyecMonopolyPractice.sln
FortuneAvenueDev/: FortuneAvenueDev.vcxproj  FortuneAvenueDev.vcxproj.filters  Resource.rc  crash_log.txt  perfil.json  reporte1213.txt  resource.h  settings.json
FortuneAvenueDev/assets/backup/DATE/: NBOTS.txt
FortuneAvenueDev/src/: main.cpp
FortuneAvenueDev/src/cinematic/: Cinematic.cpp  Cinematic.hpp
FortuneAvenueDev/src/core/: ObjetosGlobal.hpp  ResourceGlobal.cpp  ResourceGlobal.hpp
FortuneAvenueDev/src/game/offiline/: Bot.cpp  Bot.hpp  CubeClassO.h  GameManager.cpp  GameOfflineO.cpp  GameOfflineO.hpp  GameOptionsO.cpp  (+13 more)
FortuneAvenueDev/src/menu/: GameModeSelector.cpp  IniciaUser.cpp  IniciaUser.hpp  IniciarPartida.hpp  ResourceLoader.cpp  ResourceLoader.h  clases.h  menuP.cpp  menuP.hpp
FortuneAvenueDev/src/network/: Client.cpp  Client.hpp  ClientData.hpp  NetworkMessage.cpp  NetworkMessage.hpp  ServerMessageHandler.cpp  ServerMessageHandler.hpp
FortuneAvenueDev/src/settings/: SettingsManager.cpp  SettingsManager.hpp
FortuneAvenueDev/src/ui/: ButtonG.cpp  ButtonG.hpp  Cube.cpp  Cube.hpp  GradientText.h  MensageBox.cpp  Particles.h  Scrollbar.cpp  Scrollbar.hpp  TextBox.cpp  cell.cpp  cell.h  menuSelecting.cpp  menuSelecting.hpp  menuswicht.cpp  menuswicht.hpp
FortuneAvenueDev/x64/Debug/: FortuneAvenue.exe.recipe  FortuneAvenueDev.exe.recipe  RCa06456
FortuneAvenueDev/x64/Release/: FortuneAvenue.exe.recipe  FortuneAvenue.ipdb  Resource.res
Fortune_Avenue/: perfil.json  proyecMonopolyPractice.vcxproj  proyecMonopolyPractice.vcxproj.filters.txt
Fortune_Avenue/src/: Logger.hpp  main.cpp
Fortune_Avenue/src/core/: ObjetosGlobal.hpp  ResourceGlobal.hpp
Fortune_Avenue/src/menu/: IniciaUser.cpp  menuP.cpp
Fortune_Avenue/src/network/: Client.cpp  Client.hpp  NetworkMessage.hpp  ServerMessageHandler.cpp  ServerMessageHandler.hpp
Fortune_Avenue/src/ui/: ButtonG.hpp  ResourceGeneral.cpp  Scrollbar.cpp  Sound.hpp
Fortune_Avenue/x64/Debug/: Fortune_Avenue.exe.recipe  proyecMonopolyPractice.vcxproj.FileListAbsolute.txt
Fortune_Avenue/x64/Release/: proyecMonopolyPractice.ipdb  proyecMonopolyPractice.vcxproj.FileListAbsolute.txt
assets/image/Button/: BotonJugarOff.xcf
gameproject/: from_gimpfu_import
gameproject/caso/Nueva carpeta/: 161590-OVFD3Z-794.xcf  flat-design-christmas-badge-collection.xcf  rave-party-sticker-set-design (1).xcf
gameproject/origen listo/Nueva carpeta (2)/: jhgfdtyuik.py
proyecMonopolyPractice/: ButtonG.cpp  ButtonG.hpp  Chat.cpp  Chat.hpp  Cinematic.cpp  Cinematic.hpp  Client.cpp  Client.hpp  Cube.hpp  CubeClass.h  Economy.cpp  Economy.hpp  FadeEffect.cpp  FadeEffect.hpp  Game.cpp  Game.hpp  GameEnd.cpp  GameEnd.hpp  GameMode.cpp  GameMode.hpp  GameModeSelector.cpp  GameModeSelector.hpp  GameOptions.cpp  GameOptions.hpp  Globals.hpp  HouseBuy.cpp  HouseBuy.hpp  IniciaUser.cpp  IniciaUser.hpp  IniciarPartida.cpp  IniciarPartida.hpp  LoadingScreen.cpp  LoadingScreen.hpp  MensageBox.hpp  MoveEffect.cpp  MoveEffect.hpp  MovePieces.cpp  MovePieces.hpp  MultiplayerGame.cpp  MultiplayerGame.hpp  (+50 more)
proyecMonopolyPractice/aseets/: shader_noise.frag
proyecMonopolyPractice/aseets/Shaders/: ColorShift.frag  FadeInOut.frag  LightSweep.frag  Pixelation.frag  TVScanlines.frag
proyecMonopolyPractice/assets/: Bots.txt  Nuevo Text Document.txt  perfil.json  shader_Blur.frag  shader_glow.frag  shader_gradient.frag  shaderlink.frag
proyecMonopolyPractice/assets/Cosas que no se usan - assets/: GameMode.cpp  token.txt
proyecMonopolyPractice/assets/DATE/: NBOTS.txt  NBOTS.txt.txt
proyecMonopolyPractice/assets/Shaders/: ChromaticAberration.frag  ColorPulse.frag  DistorsionAgua.frag  EdgeDetection.frag  Glitch.frag  LiquidMetal.frag  PixelWave.frag  Vignette.frag  WavyDistortion.frag  blur.frag  brightness.frag  grayscale.frag  invert.frag  neonIntensoBrillo.frag  noise.frag  sepia.frag  shaderlink.frag  wave.frag
proyecMonopolyPractice/assets/image/: mapa 1.xcf  window_13905854.xcf
proyecMonopolyPractice/assets/sounds/: ruletagirodeten.aup3
proyecMonopolyPractice/libs/lib/: enet.lib
proyecMonopolyPractice/paginarara/: Pagina Web Fortune Avenue.html  index.html  scripts.js  styles.css
proyecMonopolyPractice/resource/: proyecMonopolyPractice.lnk
proyecMonopolyPractice/resource/Shaders/: Distortion.frag  DreamyGlow.frag  FresnelEffect.frag  HeatHaze.frag  Mosaic.frag  SineWaveDistortion.frag  wavePerso.frag
proyecMonopolyPractice/src/: main.cpp
proyecMonopolyPractice/src/cinematic/: Cinematic.cpp
proyecMonopolyPractice/src/core/: ObjetosGlobal.cpp  ObjetosGlobal.hpp  ResourceGlobal.cpp  ResourceGlobal.hpp
proyecMonopolyPractice/src/menu/: GameModeSelector.cpp  GameModeSelector.hpp  IniciaUser.cpp  IniciaUser.hpp  IniciarPartida.cpp  IniciarPartida.hpp  menuP.cpp  menuP.hpp
proyecMonopolyPractice/src/network/: Client.cpp  Client.hpp  ClientData.cpp  NetworkMessage.cpp  NetworkMessage.hpp  ServerMessageHandler.cpp  ServerMessageHandler.hpp
proyecMonopolyPractice/src/settings/: SettingsManager.cpp  SettingsManager.hpp
proyecMonopolyPractice/src/sin funcion aparaente/: Economy.cpp  Economy.hpp  WebViewManager.hpp  card.h  oauth_client.cpp  oauth_client.h
proyecMonopolyPractice/src/ui/: ButtonG.cpp  ButtonG.hpp  Cube.cpp  MensageBox.cpp  Particles.h  ResourceGeneral.cpp  ResourceGeneral.hpp  Scrollbar.cpp  Scrollbar.hpp  Sound.cpp  TextBox.cpp  TextBox.hpp  cell.cpp  quad.vtk
proyecMonopolyPractice/x64/Debug/: proyecMonopolyPractice.exe.recipe  proyecMonopolyPractice.ilk  proyecMonopolyPractice.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/: libcef.lib
(+140 files in other folders)
